[package]
name = "app"
version = "0.1.0"
authors = ["Chris Sampson <csampson@appliedsystems.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
moxie = "*"
mox = "*"
topo = "*"
illicit = "*"
engine = { path = "../engine", version = "0.1.0"}
app_state = { path = "../app_state", version = "0.1.0"}