[package]
name = "engine"
version = "0.1.0"
authors = ["Chris Sampson <csampson@appliedsystems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moxie = "*"
mox = "*"
topo = "*"
illicit = "*"
dyn-cache = "*"
paste = "1.0.5"
legion = "0.3.1"
serde_json = "1.0.64"
serde = "1.0.125"
libloading = "0.7.0"
notify = "4.0.0"