[package]
name = "runner"
version = "0.1.0"
authors = ["Chris Sampson <csampson@appliedsystems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine", version = "0.1.0"}
app_state = { path = "../app_state", version = "0.1.0"}
